Fixed word wrap

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 html, body {
+    max-width: 100vw;
     margin: 0;
     padding: 0;
+    word-break: break-word;
 }
